@@ -53,6 +53,9 @@ class Board(SignalEvent, TabContent):
 
         self.board = ViewBoard(view['arch'], window, context=context)
         self.model = model
+        self.view_id = view_id
+        self.context = context
+        self.auto_refresh = auto_refresh
         if not name:
             self.name = self.board.name
         else:
@@ -72,6 +75,17 @@ class Board(SignalEvent, TabContent):
 
     def sig_close(self):
         return True
+
+    def __eq__(self, value):
+        if not value:
+            return False
+        if not isinstance(value, Board):
+            return False
+        return (self.model == value.model
+            and self.view_id == value.view_id
+            and self.context == value.context
+            and self.name == value.name
+            and self.auto_refresh == value.auto_refresh)
 
     def sig_win_close(self, widget):
         Main.get_main().sig_win_close(widget)
